--- a/public/css/index.css
+++ b/public/css/index.css
@@ -395,6 +395,62 @@ body {
   .index_container_describe span {
     white-space: nowrap;
   }
+  .index_cover {
+    -webkit-transform: translateX(-200%);
+    transform: translateX(-200%);
+    width: 80%;
+    background-color: #d8d8d8;
+    opacity: 0.9;
+    position: absolute;
+    z-index: 199;
+    left: 10%;
+    font-size: 1rem;
+  }
+  .index_cover .index_cover_pic {
+    width: 80%;
+    padding: 0 10%;
+    display: inline-block;
+    vertical-align: top;
+  }
+  .index_cover img {
+    margin: 0 auto;
+    max-width: 100%;
+  }
+  .index_cover .index_cover_word {
+    display: inline-block;
+    width: 80%;
+  }
+  .index_cover .index_cover_theme,
+  .index_cover .index_cover_describe {
+    background-color: #eee;
+    border-radius: 1rem;
+    font-size: 2rem;
+    vertical-align: top;
+    margin-left: 10%;
+    position: relative;
+    height: 2rem;
+    line-height: 2rem;
+    margin-top: 1rem;
+  }
+  .index_cover .index_cover_describe {
+    height: 4rem;
+    line-height: 2rem;
+    margin-bottom: 1rem;
+  }
+  .index_cover .index_close {
+    cursor: pointer;
+    background-color: #000;
+    opacity: 0.8;
+    color: #d8d8d8;
+    width: 3rem;
+    height: 3rem;
+    text-align: center;
+    line-height: 3rem;
+    font-size: 2rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
   footer {
     width: 100%;
     position: relative;
