--- a/public/less/comeon.less
+++ b/public/less/comeon.less
@@ -134,10 +134,81 @@ html,body{
 
 @-webkit-keyframes hat {
   0% {
+  	-moz-transform: scale(3);
+  	-ms-transform: scale(3);
+  	-o-transform: scale(3);
     -webkit-transform: scale(3);
     transform: scale(3);
   }
   100% {
+  	-moz-transform: scale(1);
+  	-ms-transform: scale(1);
+  	-o-transform: scale(1);
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes hat {
+  0% {
+  	-moz-transform: scale(3);
+  	-ms-transform: scale(3);
+  	-o-transform: scale(3);
+    -webkit-transform: scale(3);
+    transform: scale(3);
+  }
+  100% {
+  	-moz-transform: scale(1);
+  	-ms-transform: scale(1);
+  	-o-transform: scale(1);
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@-o-keyframes hat {
+  0% {
+  	-moz-transform: scale(3);
+  	-ms-transform: scale(3);
+  	-o-transform: scale(3);
+    -webkit-transform: scale(3);
+    transform: scale(3);
+  }
+  100% {
+  	-moz-transform: scale(1);
+  	-ms-transform: scale(1);
+  	-o-transform: scale(1);
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@-moz-keyframes hat {
+  0% {
+  	-moz-transform: scale(3);
+  	-ms-transform: scale(3);
+  	-o-transform: scale(3);
+    -webkit-transform: scale(3);
+    transform: scale(3);
+  }
+  100% {
+  	-moz-transform: scale(1);
+  	-ms-transform: scale(1);
+  	-o-transform: scale(1);
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@-ms-keyframes hat {
+  0% {
+  	-moz-transform: scale(3);
+  	-ms-transform: scale(3);
+  	-o-transform: scale(3);
+    -webkit-transform: scale(3);
+    transform: scale(3);
+  }
+  100% {
+  	-moz-transform: scale(1);
+  	-ms-transform: scale(1);
+  	-o-transform: scale(1);
     -webkit-transform: scale(1);
     transform: scale(1);
   }
@@ -153,6 +224,9 @@ html,body{
 	margin-top: 1rem;
 	//transform:scale(3);
 	z-index: 15;
+	-moz-animation: hat 3s 1 0s forwards;
+  	-ms-animation: hat 3s 1 0s forwards;
+  	-o-animation: hat 3s 1 0s forwards;
 	-webkit-animation: hat 3s 1 0s forwards;
   	animation: hat 3s 1 0s forwards;
 }
@@ -165,6 +239,10 @@ html,body{
 	position: absolute;
 	top:-1.5rem;
 	left: 2.5rem;
+	-moz-transform: scaleY(0.5);
+  	-ms-transform: scaleY(0.5);
+  	-o-transform: scaleY(0.5);
+	-webkit-transform: scaleY(0.5);
 	transform:scaleY(0.5);
 	.border();
 	z-index: 10;
@@ -198,6 +276,10 @@ html,body{
 	position: absolute;
 	top:2rem;
 	left: -1rem;
+	-moz-transform: scaleY(0.3);
+  	-ms-transform: scaleY(0.3);
+  	-o-transform: scaleY(0.3);
+	-webkit-transform: scaleY(0.3);
 	transform:scaleY(0.3);
 	.border();
 	z-index: 10;
@@ -228,6 +310,9 @@ html,body{
 		position: absolute;
 		top:0.5rem;
 		background-color: #000;
+		-moz-transform:rotate(15deg);
+  		-ms-transform:rotate(15deg);
+  		-o-transform:rotate(15deg);
 		-webkit-transform:rotate(15deg);
 		transform:rotate(15deg);
 	}
@@ -236,6 +321,9 @@ html,body{
 	}
 	.comeon_glass_right:before{
 		right: -3rem;
+		-moz-transform:rotate(-15deg);
+  		-ms-transform:rotate(-15deg);
+  		-o-transform:rotate(-15deg);
 		-webkit-transform:rotate(-15deg);
 		transform:rotate(-15deg);
 	}
