--- a/views/admin.jade
+++ b/views/admin.jade
@@ -1,7 +1,8 @@
 doctype html
 html
   head
-    title= appTitle
+    title
+      |Admin
     link(rel='stylesheet', href='css/lib/bootstrap.min.css')
     link(rel='stylesheet', href='css/lib/bootstrap-theme.min.css')
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
@@ -15,11 +16,11 @@ html
         .content
           block content
           .col-md-4.col-md-offset-4
-          form(action="/login", method="POST")
+          form(action="/admin/login", method="POST")
             p
-              input.form-control(name="email", type="text", placeholder="your email:")
+              input.form-control(name="email", type="text", id="admin_email" placeholder="your email:")
             p
-              input.form-control(name="password", type="password", placeholder="your password:")
+              input.form-control(name="password", type="password", id="admin_psw" placeholder="your password:")
             p
               button.btn.btn-lg.btn-primary.btn-block(type="submit") Log in
 
