--- a/views/login.jade
+++ b/views/login.jade
@@ -1,9 +1,12 @@
 doctype html
 html
   head
-    title= appTitle
+    title
+      |Admin
     link(rel='stylesheet', href='css/lib/bootstrap.min.css')
     link(rel='stylesheet', href='css/lib/bootstrap-theme.min.css')
+    script(type="text/javascript", src="js/lib/jquery.min.js")
+    script(type="text/javascript", src='js/admin/adminapp.js')
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
   body
     #wrap
@@ -15,13 +18,13 @@ html
         .content
           block content
           .col-md-4.col-md-offset-4
-          form(action="/login", method="POST")
+          form(id="adminForm" action="/admin/login" method="post")
             p
-              input.form-control(name="email", type="text", placeholder="your email:")
+              input.form-control(name="email", type="text", id="admin_email" placeholder="your email:")
             p
-              input.form-control(name="password", type="password", placeholder="your password:")
+              input.form-control(name="password", type="password", id="admin_psw" placeholder="your password:")
             p
-              button.btn.btn-lg.btn-primary.btn-block(type="submit") Log in
+              button.btn.btn-lg.btn-primary.btn-block(type="submit" ) Log in
 
     block footer
       footer
